# GSPCore-C

./: CMakeLists.txt  README.md
bindings/csharp/OpenGSP/: OpenGSP.csproj  Program.cs
bindings/rust/gsp_core/: Cargo.toml
crates/gsp_window/: Cargo.toml
crates/gsp_window/src/: lib.rs
docs/: .$GSPCoreArchitecture.svg.bkp
docs/general/: Devlog.md  LinksReferences.md  OpenGSPObjectiveDesign.md  StyleGuide.md  TechnicalPlans.md
hvg/: example.xml
include/GSPCore/: GApplication.h  GHiperRenderManager.h  GLog.h  GMemoryPool.h  GPointer.h  GRenderManager.h  GSPCore.h  GVector.h  GWebGLRenderer.h  GWindow.h
include/GSPCore/Application/: GApplication.h  GApplicationManager.h
include/GSPCore/Basic/: GApplication.h  GLog.h  GVector.h  GView.h  GWindow.h
include/GSPCore/Controllers/: GApplicationController.h  GViewController.h  GWindowController.h
include/GSPCore/Debug/: GLog.h
include/GSPCore/Drawing/: GDrawContainer.h  GDrawing.h  GDrawingManager.h  GFont.h  GPath.h  README.md
include/GSPCore/GCP/: GCP.h
include/GSPCore/Graphics/: GFrame.h  GRenderManager.h  GRenderer.h  GSurface.h  GTextProvider.h
include/GSPCore/Localization/: GLocalStringProvider.h  GLocale.h
include/GSPCore/Markup/: GMarkupManager.h
include/GSPCore/Render/: GRenderManager.h
include/GSPCore/Resource/: GResourceManager.h
include/GSPCore/SVG/: GSvgElements.h  GSvgTypes.h
include/GSPCore/Server/: GSPServer.h
include/GSPCore/Solver/: GSolver.h
include/GSPCore/Types/: GSPCoreGeometry.h  GSPCoreGraphics.h  GSPCoreOpaqueTypes.h  GVector.h
include/GSPCore/UI/: GView.h
include/GSPCore/View/: GView.h  GViewAdaptiveProperty.h  GViewAttribute.h  GViewClass.h  GViewManager.h  GViewProperty.h  GViewState.h
include/GSPCore/Window/: GWindow.h  GWindowManager.h
include/GSPCore/Windowing/: GWindow.h  GWindowManager.h
include/GSPCore2/: GSPCore.h
include/GSPCore2/Basic/: GApplication.h  GSPCoreGeometry.h  GWindow.h
include/GSPCore2/Controllers/: GApplicationController.h  GViewController.h  GWindowController.h
include/GSPCore2/Graphics/: GRenderer.h
include/GSPCoreOld/: GRenderManager.h  GWindow.h
include/GSPCoreOld/Drawing/: GCommandBuffer.h  GDrawContainer.h  GDrawElement.h  GDrawResource.h
include/GSPCoreOld/Graphics/: GGI.h  GRenderPass.h  GShader.h  GTexture.h  GVertexBuffer.h
include/GSPCoreOld/Solver/: GSolverConstant.h
internal/def/: GApplicationDef.h  GVectorDef.h  GWindowDef.h
internal/def/Drawing/: GDrawElementDef.h
internal/def/Graphics/: GFrameDef.h  GRenderPassDef.h  GShaderDef.h  GTextProviderDef.h  GTextureDef.h  GVertexBufferDef.h
internal/def/UI/: GViewDef.h
internal/include/: GVector.h
lib/: CMakeLists.txt
lib/gsp_compositor/: README.md
lib/gsp_compositor/include/gsp_compositor/: gsp_compositor.h
lib/gsp_compositor/src/: gsp_compositor_internal.h
lib/gsp_containers/: CMakeLists.txt
lib/gsp_containers/include/gsp_containers/: gsp_list.h  gsp_tree.h
lib/gsp_containers/src/: gsp_list.c  gsp_tree.c
lib/gsp_debug/: CMakeLists.txt  README.md
lib/gsp_debug/include/gsp_debug/: gsp_debug.h
lib/gsp_debug/src/: gsp_debug.c
lib/gsp_drawing/: CMakeLists.txt  README.md
lib/gsp_drawing/include/gsp_drawing/: gsp_drawing.h  gsp_drawing_d2d1.h
lib/gsp_drawing/src/: gsp_drawing.c  gsp_drawing_cairo.c  gsp_drawing_d2d1.cpp
lib/gsp_list/: CMakeLists.txt
lib/gsp_list/include/gsp_list/: gsp_list.h
lib/gsp_list/src/: gsp_list.c
lib/gsp_parsers/: README.md
lib/gsp_renderer/: CMakeLists.txt  README.md
lib/gsp_renderer/include/gsp_renderer/: gsp_renderer.h
lib/gsp_renderer/src/: glad.c  glad.h  gsp_renderer.c
lib/gsp_types/: CMakeLists.txt  README.md
lib/gsp_types/include/gsp_types/: gsp_compositor_types.h  gsp_container_types.h  gsp_geometry_types.h  gsp_graphics_types.h  gsp_image_types.h  gsp_list_types.h  gsp_renderer_types.h  gsp_string_types.h  gsp_types.h  gsp_view_types.h  gsp_window_types.h
lib/gsp_types/src/: gsp_geometry_types.c
lib/gsp_view/: CMakeLists.txt  README.md
lib/gsp_view/include/gsp_view/: gsp_view.h
lib/gsp_view/src/: gsp_view.c
lib/gsp_views/: README.md
lib/gsp_window/: CMakeLists.txt  README.md
lib/gsp_window/include/gsp_window/: gsp_window.h
lib/gsp_window/src/: gsp_window.c  gsp_window_internal.h  gsp_window_wayland.c  gsp_window_wayland.h  gsp_window_win32.c  gsp_window_win32.h  gsp_window_x11.c  gsp_window_x11.h
oldsrc/: GApplication.c
oldsrc/graphics/unix/: GFrame_gl.c  GVertexBuffer_gl.c
oldsrc/graphics/vulkan/: GHiperRenderManager.c
oldsrc/graphics/win32/: GTextProvider.c
oldsrc/platform/wasm/: GWindow.c
oldsrc/platform/win32/: GSPCore.c  GWindow.c
oldsrc/platform/x11/: GWindow.c
oldsrc/rendering/webgl/: GWebGLRenderer.c
oldsrc/ui/: GView.c
resources/gsml/: example.gsml
resources/metal/shaders/: fragment.metal  vertex.metal
resources/vulkan/shaders/: vert.spv
resources/wasm/: gspcore.html
src/: GApplication.c  GLog.c  GRenderManager.c  GSPCore.c  GVector.c
src/Application/: GApplication.c  GApplicationManager.c
src/Basic/: GApplication.c  GLog.c  GVector.c
src/Controllers/: GViewController.c
src/Debug/: GLog.c
src/Drawing/: GDrawing.c  GDrawingManager.c
src/Graphics/: GRenderManager.c  GRenderer.c
src/Markup/: GMarkupManager.c
src/Render/: GRenderManager.c
src/Resource/: GResourceManager.c
src/Server/: GSPServer.c
src/Types/: GSPCoreGeometry.c
src/View/: GView.c  GViewManager.c
src/Window/: GWindowManager.c
src/Windowing/: GWindowManager.c
src/graphics/unix/: GFrame_gl.c  GShader_gl.c  GTexture_gl.c  unix_GTextProvider.c
src/graphics/vulkan/: GHiperRenderManager.c  GRenderManager.c
src/platform/wasm/: GSPCore.c  GWindow.c
src/platform/win32/: GSPCore.c  (+2 more)
src/ui/: GView.c
test/: CMakeLists.txt  main.c
test/test/: Program.cs  test.csproj
testing/: helloGspInterface2.c  helloTriangle.cpp  helloworld.c  main.c  mainOld.c  mempool  mempool.c  oop  oop.c  vk  vkTri.cpp
testing/web/: CMakeLists.txt  a.out.js  gspcore.html  index.js  index.wasm  main.c  main.html  main.js  main.wasm
trials/: cairoText.c  index.html
(+54 files in other folders)
